# dummy_c_plugins

./: CMakeLists.txt  package.xml
include/dummy_c_plugins/: no_op.h
src/: no_op.cpp  plugins.cpp  test_lib.cpp
